<resources>
    <string name="app_name">账本</string>
    <string name="action_settings">Settings</string>
    <string name="setting">设置</string>

    <string name="rmb">元</string>
    <string name="day_">日</string>
    <string name="week_">周</string>
    <string name="month_">月</string>
    <string name="year_">年</string>
    <string name="money">金额</string>
    <string name="input_money">请输入金额</string>
    <string name="money_for_what">去向</string>
    <string name="input_where">请输入去向</string>
    <string name="category">类别</string>
    <string name="input_category">请输入类别</string>
    <string name="remark">备注</string>
    <string name="input_remark">请输入备注</string>
    <string name="save">保存</string>
    <string name="date">日期</string>
    <string name="input_date">e.g 2017-1-1 12:00</string>
    <string name="income">收入</string>
    <string name="expend">支出</string>
    <string name="input_date_str">请输入时间</string>


    <!--去向-->
    <string name="breakfast">早餐</string>
    <string name="launch">午餐</string>
    <string name="dinner">晚餐</string>
    <string name="snack">零食</string>
    <string name="shopping">购物</string>
    <string name="travel">旅游</string>
    <string name="haircut">理发</string>
    <string name="transportation">交通</string>
    <string name="treatment">医疗</string>
    <string name="house">房租</string>
    <string name="other">其他</string>
    <string name="all">共</string>

    <string name="back_up">导入备份文件(account_back_up/sqlite_test.db)</string>
    <string name="loading">加载中...</string>
    <string name="back_up_success">备份成功</string>
    <string name="back_up_faild">备份失败</string>
    <string name="back_up_wrong">不需要备份的数据库！</string>
    <string name="not_file_back_file">没有找到备份文件</string>
    <string name="sdcard_not_exist">sdcard 不存在,备份数据失败,请检测sdcard</string>
    <string name="hint">温馨提示:</string>
    <string name="sure_del">确定删除</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>

    <string name="should_open_sdcard_permisstion">请开启读写sdcard的权限</string>

</resources>
